Módulo de cobros con PAYPAL

--- a/templates/components/home.html
+++ b/templates/components/home.html
@@ -641,6 +641,31 @@
                         </a>
                     </div>
                 </div>
+                <!-- Módulo de Cobros con PAYPAL -->
+                <div class="flex justify-center items-center mt-6">
+                    <div class="group relative w-full bg-gray-100 dark:bg-gray-800 rounded-2xl p-4 transition-all duration-500 max-md:max-w-md max-md:mx-auto hover:bg-purple-600 dark:hover:bg-purple-700">
+                        <div class="bg-white dark:bg-gray-700 rounded-full flex justify-center items-center mb-5 w-14 h-14">
+                            <i class="fa-brands fa-paypal text-2xl text-purple-500 dark:text-purple-400"></i>
+                        </div>
+                        <h4 class="text-xl font-semibold text-gray-900 dark:text-white mb-3 capitalize transition-all duration-500 group-hover:text-white">{% trans 'Cobros de facturas' %}</h4>
+                        <p class="text-sm font-normal text-gray-500 dark:text-gray-400 transition-all duration-500 leading-5 group-hover:text-white">
+                            {% trans 'Gestiona el cobro de sus ventas.' %}
+                        </p>
+                        <button onclick="showAlert()" class="mt-4 inline-flex items-center justify-center px-5 py-2 text-sm font-medium text-white bg-purple-500 rounded-lg hover:bg-purple-600 focus:ring-4 focus:ring-purple-300 dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-800">
+                            {% trans 'Empezar' %}
+                        </button>
+                    </div>
+                </div>
+
+                <script>
+                    function showAlert() {
+                        Swal.fire({
+                            icon: 'info',
+                            title: 'Sistema de cobros por PAYPAL',
+                            text: 'Estamos trabajando para implementarla en futuras actualizaciones.'
+                        });
+                    }
+                </script>
             </div>
         </div>
     </section>
